--- a/menu_styles.css
+++ b/menu_styles.css
@@ -6,6 +6,11 @@ a{
     text-decoration: none;
 }
 
+#canada{
+    border-color: white;
+    text-align: center;
+}
+
 p{
     color: white;
     text-decoration: none;
