--- a/menu_styles.css
+++ b/menu_styles.css
@@ -11,11 +11,17 @@ a:link {
     text-align: center;
 }
 
+/* #disappear:hover{
+    transition: 0.5s;
+    visibility: hidden;
+} */
+
 #ReturnMenuBtn{
     color:white;
     font-size: 2rem;
     font-weight: 200;
     border:none;
+    margin-right: 2rem;
 }
 
 #ReturnMenuBtn:hover{
@@ -25,6 +31,7 @@ a:link {
     color:black;
     transition: 0.5s;
     border:none;
+    margin-right: 2rem;
 }
 
 p{
